@@ -213,7 +213,8 @@ standardWF <- function(form,train,test,
         if (.fullOutput) .fullRes$modeling <- ps
     } else {
         #m <- do.call(learner,c(list(form,train),learner.pars))
-        m <- do.call(eval(parse(text=learner)),c(list(form,train),learner.pars))
+        ## The following addition of data= was caused by the "wrong" order of parameters of gbm
+        m <- do.call(eval(parse(text=learner)),c(list(form,data=train),learner.pars)) 
         t.tr <- as.numeric(Sys.time() - tm,units="secs")
         tm <- Sys.time()
         #ps <- do.call(predictor,c(list(m,test),predictor.pars))
@@ -311,7 +312,8 @@ timeseriesWF <- function(form,train,test,
             if (.fullOutput) models <- c(models,list(start=s,ps=ps))
         } else {
             #m <- do.call(learner,c(list(form,tr),learner.pars))
-            m <- do.call(eval(parse(text=learner)),c(list(form,tr),learner.pars))
+            ## The following addition of data= was caused by the "wrong" order of parameters of gbm
+            m <- do.call(eval(parse(text=learner)),c(list(form,data=train),learner.pars)) 
             t.tr <- t.tr + as.numeric(Sys.time() - tm,units="secs")
             tm <- Sys.time()
             #ps <- do.call(predictor,c(list(m,ts),predictor.pars))
